# pyOpenAnnotate

./: .gitignore  README.md  __init__.py  annotate  annotations.py  names.txt  openann.py  pyproject.toml  setup.py  utils.py
Annotations/: 10514-415339637.txt  35471-964131792.txt  46113-1889105740.txt  49211-1791711622.txt  4951-1447542391.txt  58906-1851980995.txt  img-0.txt  img-1.txt  img-10.txt  img-100.txt  img-101.txt  img-102.txt  img-103.txt  img-104.txt  img-105.txt  img-106.txt  img-107.txt  img-108.txt  img-109.txt  img-11.txt  img-110.txt  img-111.txt  img-112.txt  img-113.txt  img-114.txt  img-115.txt  img-116.txt  img-117.txt  img-118.txt  img-119.txt  img-12.txt  img-120.txt  img-121.txt  img-122.txt  img-123.txt  img-124.txt  img-125.txt  img-126.txt  img-127.txt  img-128.txt  (+368 more)
example/: names.txt  visualize.py
example/Annotations/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  78egtb.txt  78gtb.txt  78segtb.txt  8.txt  9.txt
labels/: balloons.txt  birds-1.txt  pexels-flora-hsu-7008067.txt  pexels-palu-malerba-14305.txt  pexels-palu-malerba-14305356 (1).txt  pexels-palu-malerba-14305356.txt
pyOpenAnnotate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: LICENSE  MANIFEST.in  README.md  annotate.py  names.txt  pyproject.toml
src/annotation/: annotate.py  utils.py
src/example/: names.txt  visualize.py
src/example/Annotations/: img-0.txt  img-11.txt  img-12.txt  img-13.txt  img-14.txt  img-16.txt  img-17.txt  img-18.txt  img-2.txt  img-20.txt  img-21.txt  img-22.txt  img-23.txt  img-25.txt  img-26.txt  img-27.txt  img-28.txt  img-29.txt  img-3.txt  img-30.txt  img-31.txt  img-32.txt  img-33.txt  img-34.txt  img-36.txt  img-37.txt  img-38.txt  img-39.txt  img-4.txt  img-40.txt  img-41.txt  img-42.txt  img-43.txt  img-44.txt  img-45.txt  img-46.txt  img-47.txt  img-48.txt  img-49.txt  img-5.txt  (+17 more)
src/example/labels/: img-0.txt  img-1.txt  img-2.txt
src/tools/: visualize.py
